# advent_of_bevy

./: Cargo.toml
assets/days/: day0.day.ron  day1.day.ron  day2.day.ron  day3.day.ron  day4.day.ron  day5.day.ron  day6.day.ron  day7.day.ron  day8.day.ron
assets/elf/body/: body0.part.ron
assets/elf/hat/: hat0.part.ron  hat0_0_1.part.ron  hat0_0_2.part.ron  hat0_0_3.part.ron  hat0_1_1.part.ron  hat0_1_2.part.ron  hat0_1_3.part.ron  hat0_1_4.part.ron  hat0_2_0.part.ron  hat0_2_1.part.ron  hat0_2_3.part.ron  hat0_2_4.part.ron  hat0_3_0.part.ron  hat0_3_2.part.ron  hat0_3_3.part.ron  hat0_3_4.part.ron  hat0_4_0.part.ron  hat0_4_1.part.ron  hat0_4_2.part.ron  hat0_4_3.part.ron  hat1_0_0.part.ron  hat1_0_1.part.ron  hat1_0_2.part.ron  hat1_0_3.part.ron  hat1_0_4.part.ron  hat1_1_0.part.ron  hat1_1_1.part.ron  hat1_1_2.part.ron  hat1_1_3.part.ron  hat1_1_4.part.ron  hat1_2_0.part.ron  hat1_2_2.part.ron  hat1_2_3.part.ron  hat1_2_4.part.ron  hat1_3_0.part.ron  hat1_3_1.part.ron  hat1_3_2.part.ron  hat1_3_3.part.ron  hat1_3_4.part.ron  hat1_4_0.part.ron  (+65 more)
assets/elf/head/: head0.part.ron
assets/elf/legs/: legs0.part.ron  legs0_0_0.part.ron  legs0_0_1.part.ron  legs0_0_2.part.ron  legs0_0_3.part.ron  legs0_0_4.part.ron  legs0_1_0.part.ron  legs0_1_1.part.ron  legs0_1_3.part.ron  legs0_1_4.part.ron  legs0_2_0.part.ron  legs0_2_1.part.ron  legs0_2_2.part.ron  legs0_2_3.part.ron  legs0_2_4.part.ron  legs0_3_0.part.ron  (+93 more)
src/: advent_calendar.rs  elf.rs  main.rs  utils.rs
src/days/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  mod.rs
