[package]
name = "advent_of_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.9", features = ["serialize"]}
bevy_editor_pls = {git = "https://github.com/jakobhellermann/bevy_editor_pls"}
rand = "0.8"
serde = "1"
ron = "0.8"
chrono = "0.4"
futures = "*"
png = "0.17.7"
indexmap = "*"